# StanBKT-Experiments

./: experiment2_analysis.ipynb  pyproject.toml  stanbkt-0.1.1-py3-none-any.whl
pyBKT/source-cpp/pyBKT/util/: metrics.py
pyBKT/source-py/pyBKT/util/: metrics.py
scripts/: 01_process_data.sh  02a_fit_assist.sh  02b_fit_itv.sh  03_evaulate.sh  03b_evaulate_itv.sh  04_predict_itv.sh  04_predict_itv_mastery_agg.sh
src/: 01_process_data.py  02_fit_assist.py  02_fit_itv.py  03_evaulate.py  03_evaulate_itv.py  03_results_tables.tex  04_predict_itv.py  04_predict_itv_mastery_agg.py  check_pybkt_backend.py  fit_assist_common.py  fit_pybkt.py  fit_pybkt_assist.py  fit_stanbkt_assist.py  metrics.py
